--- a/PosOnLine/PosOnLine.csproj
+++ b/PosOnLine/PosOnLine.csproj
@@ -691,6 +691,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CambiosVersion.txt" />
     <Content Include="conf.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
